# renderscript

./: .gitignore  LICENSE  NOTICE  README.md  TRADEMARKS.md  build_backend.py  out_natural.txt  pyproject.toml  renderscript.schema.v0.1.json  sora_test.txt  temp.rscript
app/: README.md  main.py  requirements.txt
app/static/: styles.css
app/templates/: index.html
bench/: protocol.md  runs.csv  scoring.csv
docs/: 17_LOCAL_SKILL_TEMPLATE.md  CODEBASE_GUIDE.md  DEPLOYMENT_BRANCH_AND_CONTAINER_PATH.md  GITHUB_PUBLISH_AND_BRANCH_PROMOTION.md  RELEASE_CHECKLIST.md  REPOSITORY_WORKFLOW.md  STRUCTURE_MAP.md
examples/: realistic.fountain  t1_dialogue_attribution.fountain  t2_character_continuity.fountain  t3_prop_dependency.fountain  t4_location_persistence.fountain
examples/expected/: realistic.natural.txt  realistic.structured.txt  t2_character_continuity.rscript  t3_prop_dependency.rscript  t4_location_persistence.rscript
renderscript/: __init__.py  cli.py  compiler.py  fountain_parser.py  ids.py  pdf_guide.py  project.py  prompt.py  providers.py  renderpackage.py  validate.py  versions.py
renderscript/templates/: creator_guide.css  creator_guide_runway.html  creator_guide_universal.html  renderpackage_storyboard.html
tests/: expected_package_paths.txt  test_app_ui.py  test_bench.py  test_cli_version.py  test_package_cli.py  test_pdf_guide.py  test_phase1a.py  test_project_bundle.py  test_prompt_cli.py  test_realistic_prompt_golden.py  test_renderpackage_validation.py  test_skill_template.py  test_stage_a_golden.py  test_strictness_failures.py
(+7 files in other folders)
