[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "renderscript"
version = "0.1.0"
description = "RenderScript Phase 1A bootstrap"
requires-python = ">=3.9"
dependencies = [
  "jinja2>=3.1.0",
  "weasyprint>=62.0",
]

[project.scripts]
renderscript = "renderscript.cli:main"
