[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "renderscript"
version = "0.1.0"
description = "RenderScript Phase 1A bootstrap"
requires-python = ">=3.9"
dependencies = [
  "jinja2>=3.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "pillow>=10.0.0",
  "pypdf>=5.0.0",
  "playwright>=1.58.0",
]

[project.scripts]
renderscript = "renderscript.cli:main"
